--- a/style.css
+++ b/style.css
@@ -105,6 +105,17 @@ header {
       .img {
         width: 35%;
       }
+      p{
+        display: flex;
+        gap: 10px;
+        font-size: 1rem;
+        cursor: pointer;
+        span{
+          font-size: .9rem;
+          font-weight: 900;
+          color: green;
+        }
+      }
     }
   }
 }
