--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ header {
     padding: 20px 0;
     @media screen and (max-width: 767px) {
       padding: 20px 15px;
+        border-bottom: #8888888a 2px solid;
     }
   }
   h1 {
@@ -36,15 +37,34 @@ header {
 
 .hero {
   background-color: #0f0f0f;
-  height: 100vh;
+  
   overflow: hidden;
   padding: 30px 0;
+  @media screen and (max-width: 767px) {
+    background-image: url("./imag/hero-img.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+  }
   .container {
     font-family: "Manrope", sans-serif;
+    .img{
+      width: 50%;
+      @media screen and (max-width: 767px) {
+        display: none;
+      }
+    }
     .info {
       display: flex;
       flex-direction: column;
       gap: 15px;
+      width: 50%;
+      @media screen and (max-width: 767px) {
+        width: 100%;
+        text-align: center;
+        align-items: center;
+      }
 
       h3 {
         font-size: 1rem;
@@ -61,8 +81,10 @@ header {
         width: 55%;
       }
       button {
-        width: 160px;
+        width: 25%;
         height: 48px;
+        max-height: 10%;
+       
         color: white;
         font-family: Manrope;
         font-weight: 700;
@@ -130,13 +152,14 @@ header {
     border-radius: 10px;
     .img {
       width: 410.23358154296875px;
-      height: 493px;
+      max-width: 50%;
+    
       position: relative;
       bottom: -25px;
     }
     .info {
       width: 349px;
-      height: 303px;
+      
 
       h1 {
         font-size: clamp(2rem, 5vw, 4rem);
@@ -172,19 +195,23 @@ header {
 .table {
   padding: 50px 0;
   .container {
-    height: 320px;
-    background-color:#c9cbcc;
+    
+    background-color: #c9cbcc;
     overflow: hidden;
 
     .info {
+   
+      width: 50%;
       h1 {
-        font-size: clamp(2rem, 5vw, 2rem);
+        font-size: clamp(1.5rem, 5vw, 2rem);
         color: #0a0a0a;
-        text-transform: uppercase;
+        background-color: transparent;
       }
       button {
         width: 160px;
+       max-width:  60%;
         height: 48px;
+        max-height: 10%;
         color: rgb(5, 5, 5);
         font-family: Manrope;
         font-weight: 700;
@@ -193,20 +220,80 @@ header {
         letter-spacing: 1px;
         text-transform: uppercase;
         background-color: #0a0a0a00;
-        
         border-radius: 7px;
-        transition: 0.5s;        &:hover {
+        transition: 0.5s;
+        &:hover {
           background-color: #0a0a0a;
-            color: rgb(250, 250, 250);
+          color: rgb(250, 250, 250);
         }
       }
     }
     .img {
-      width: 900px;
+      width:900px;
+      max-width: 50%;
       transform: scaleX(-1);
-      position: relative;
-      right: -110px;
-      top: -100px;
+      margin-top: -80px;
+      margin-right: -20px;
+      @media screen and (max-width: 767px) {
+        margin-top: 0;
+        /* margin-right: -10px; */
+        
+      }
+    }
+  }
+}
+
+.earphone {
+  .container {
+    padding: 0;
+   overflow: hidden;
+
+  
+    gap: 50px;
+    @media screen and (max-width: 767px) {
+      
+      gap: 20px;
+    }
+    img {
+      width: 650px;
+      height: 320px;
+      max-width: 50%;
+      max-width: 50%;
+      object-fit: cover;
+    }
+    .right {
+      width: 650px;
+      max-width: 50%;
+      height: 320px;
+      background-color: #f1f1f1;
+      padding: 0 50px;
+      gap: 20px;
+      h1 {
+        font-size: clamp(1.5rem, 5vw, 2rem);
+        color: #0a0a0a;
+        background-color: transparent;
+      }
+      button {
+        width: 160px;
+        max-width: 80%;
+        height: 48px;
+        max-height: 15%;
+        color: rgb(5, 5, 5);
+        font-family: Manrope;
+        font-weight: 700;
+        font-size: 13px;
+        line-height: 100%;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        background-color: #0a0a0a00;
+
+        border-radius: 7px;
+        transition: 0.5s;
+        &:hover {
+          background-color: #0a0a0a;
+          color: rgb(250, 250, 250);
+        }
+      }
     }
   }
 }
