--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
     padding: 20px 0;
     @media screen and (max-width: 767px) {
       padding: 20px 15px;
-        border-bottom: #8888888a 2px solid;
+      border-bottom: #8888888a 2px solid;
     }
   }
   h1 {
@@ -37,7 +37,7 @@ header {
 
 .hero {
   background-color: #0f0f0f;
-  
+
   overflow: hidden;
   padding: 30px 0;
   @media screen and (max-width: 767px) {
@@ -45,11 +45,10 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    
   }
   .container {
     font-family: "Manrope", sans-serif;
-    .img{
+    .img {
       width: 50%;
       @media screen and (max-width: 767px) {
         display: none;
@@ -84,7 +83,7 @@ header {
         width: 25%;
         height: 48px;
         max-height: 10%;
-       
+
         color: white;
         font-family: Manrope;
         font-weight: 700;
@@ -153,13 +152,12 @@ header {
     .img {
       width: 410.23358154296875px;
       max-width: 50%;
-    
+
       position: relative;
       bottom: -25px;
     }
     .info {
       width: 349px;
-      
 
       h1 {
         font-size: clamp(2rem, 5vw, 4rem);
@@ -195,12 +193,10 @@ header {
 .table {
   padding: 50px 0;
   .container {
-    
     background-color: #c9cbcc;
     overflow: hidden;
 
     .info {
-   
       width: 50%;
       h1 {
         font-size: clamp(1.5rem, 5vw, 2rem);
@@ -209,7 +205,7 @@ header {
       }
       button {
         width: 160px;
-       max-width:  60%;
+        max-width: 60%;
         height: 48px;
         max-height: 10%;
         color: rgb(5, 5, 5);
@@ -229,7 +225,7 @@ header {
       }
     }
     .img {
-      width:900px;
+      width: 900px;
       max-width: 50%;
       transform: scaleX(-1);
       margin-top: -80px;
@@ -237,7 +233,6 @@ header {
       @media screen and (max-width: 767px) {
         margin-top: 0;
         /* margin-right: -10px; */
-        
       }
     }
   }
@@ -246,12 +241,10 @@ header {
 .earphone {
   .container {
     padding: 0;
-   overflow: hidden;
+    overflow: hidden;
 
-  
-    gap: 50px;
+    gap: 30px;
     @media screen and (max-width: 767px) {
-      
       gap: 20px;
     }
     img {
@@ -293,6 +286,64 @@ header {
           background-color: #0a0a0a;
           color: rgb(250, 250, 250);
         }
+      }
+    }
+  }
+}
+
+.persson {
+  padding: 100px 0;
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    @media screen and (max-width: 769px) {
+      flex-direction: column;
+      gap: 20px;
+    }
+    .img {
+      width: 640px;
+      max-width: 50%;
+      min-height: 668px;
+      background-image: url('./imag/persson.png');
+      background-position: 20% 20%;
+      background-repeat: no-repeat;
+      @media screen and (max-width: 769px) {
+        order: 1;
+        max-width: 100%;
+      }
+        .overlay {
+          width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, 0.5);
+        }
+
+    }
+    .info {
+      width: 600px;
+      max-width: 50%;
+      gap: 20px;
+      @media screen and (max-width: 769px) {
+        order: 2;
+        max-width: 100%;
+      }
+
+      h1 {
+        font-size: clamp(1.5rem, 3vw, 3.5rem);
+        color: #0a0a0a;
+        background-color: transparent;
+        span {
+          color: #9b491a;
+        }
+      }
+
+      p {
+         font-size: clamp(.8rem, 3vw, 1rem);
+        text-align: start;
+        color: #0a0a0a;
+        background-color: transparent;
+        width: 90%;
       }
     }
   }
