--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ header {
       img {
         position: absolute;
         top: -25%;
+
       }
       .img {
         width: 35%;
@@ -129,7 +130,12 @@ header {
         gap: 10px;
         margin-top: 20px;
         font-size: 0.9rem;
+        font-weight: 600;
         cursor: pointer;
+        transition: 0.5s;
+        &:hover {
+          color: rgb(128, 0, 6);
+        }
         span {
           font-size: 0.9rem;
           font-weight: 900;
@@ -149,16 +155,30 @@ header {
     overflow: hidden;
     background-color: #d87d4a;
     border-radius: 10px;
+    @media screen and (max-width: 767px) {
+      flex-direction: column;
+      padding: 50px 0;
+      align-items: center;
+      gap: 30px;
+    }
     .img {
       width: 410.23358154296875px;
       max-width: 50%;
 
       position: relative;
       bottom: -25px;
+      @media screen and (max-width: 767px) {
+        max-width: 50%;
+        position: static;
+      }
     }
     .info {
       width: 349px;
-
+         @media screen and (max-width: 767px) {
+        width: 100%;
+        text-align: center;
+        align-items: center;
+      }
       h1 {
         font-size: clamp(2rem, 5vw, 4rem);
         color: white;
@@ -193,8 +213,15 @@ header {
 .table {
   padding: 50px 0;
   .container {
-    background-color: #c9cbcc;
+    background-color: #c2c4c5;
     overflow: hidden;
+    @media screen and (max-width: 767px) {
+      background-image: url("./imag/table-remo.png");
+      padding: 50px 0;
+
+      background-position: 200% center; 
+      background-repeat: no-repeat;
+    }
 
     .info {
       width: 50%;
@@ -226,13 +253,14 @@ header {
     }
     .img {
       width: 900px;
-      max-width: 50%;
+      max-width: 80%;
       transform: scaleX(-1);
       margin-top: -80px;
       margin-right: -20px;
       @media screen and (max-width: 767px) {
         margin-top: 0;
-        /* margin-right: -10px; */
+        margin-right: -150px;
+        display: none;
       }
     }
   }
@@ -245,6 +273,7 @@ header {
 
     gap: 30px;
     @media screen and (max-width: 767px) {
+      flex-direction: column;
       gap: 20px;
     }
     img {
@@ -253,6 +282,9 @@ header {
       max-width: 50%;
       max-width: 50%;
       object-fit: cover;
+      @media screen and (max-width: 767px) {
+        max-width: 100%;
+      }
     }
     .right {
       width: 650px;
@@ -261,6 +293,9 @@ header {
       background-color: #f1f1f1;
       padding: 0 50px;
       gap: 20px;
+      @media screen and (max-width: 767px) {
+        max-width: 100%;
+      }
       h1 {
         font-size: clamp(1.5rem, 5vw, 2rem);
         color: #0a0a0a;
@@ -306,19 +341,18 @@ header {
       width: 640px;
       max-width: 50%;
       min-height: 668px;
-      background-image: url('./imag/persson.png');
+      background-image: url("./imag/persson.png");
       background-position: 20% 20%;
       background-repeat: no-repeat;
       @media screen and (max-width: 769px) {
         order: 1;
         max-width: 100%;
       }
-        .overlay {
-          width: 100%;
-          height: 100%;
-          background-color: rgba(0, 0, 0, 0.5);
-        }
-
+      .overlay {
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+      }
     }
     .info {
       width: 600px;
@@ -339,11 +373,100 @@ header {
       }
 
       p {
-         font-size: clamp(.8rem, 3vw, 1rem);
+        font-size: clamp(0.8rem, 3vw, 1rem);
         text-align: start;
         color: #0a0a0a;
         background-color: transparent;
         width: 90%;
+      }
+    }
+  }
+}
+
+footer {
+  background-color: #0a0a0a;
+  padding: 100px 0;
+  .container {
+    gap: 50px;
+    @media screen and (max-width: 767px) {
+      gap: 20px;
+      align-items: center;
+    }
+
+    .head {
+      @media screen and (max-width: 767px) {
+        flex-direction: column;
+        gap: 20px;
+      }
+      h1 {
+        font-size: clamp(1.5rem, 5vw, 2.5rem);
+        color: #f1f1f1;
+        cursor: pointer;
+      }
+      .links {
+        @media screen and (max-width: 767px) {
+          flex-direction: column;
+          gap: 10px;
+        }
+        a {
+          text-decoration: none;
+          font-size: clamp(0.8rem, 3vw, 1rem);
+          text-align: start;
+          color: #f1f1f1;
+          transition: 0.5s;
+          @media screen and (max-width: 767px) {
+            text-align: center;
+          }
+          &:hover {
+            color: #9b491a;
+          }
+        }
+      }
+    }
+    p {
+      font-size: clamp(0.8rem, 3vw, 1rem);
+      text-align: start;
+      color: #f1f1f1;
+      width: 40%;
+
+      @media screen and (max-width: 767px) {
+        text-align: center;
+        width: 80%;
+      }
+    }
+    .icons {
+      display: flex;
+      gap: 30px;
+      @media screen and (max-width: 767px) {
+        flex-direction: column;
+
+        gap: 10px;
+      }
+      p {
+        font-size: clamp(0.8rem, 3vw, 1rem);
+        text-align: start;
+        color: #f1f1f1;
+        @media screen and (max-width: 767px) {
+          text-align: center;
+        }
+      }
+      .icon {
+        margin-top: -150px;
+        display: flex;
+        gap: 20px;
+        @media screen and (max-width: 767px) {
+          justify-content: center;
+          margin-top: 0;
+        }
+        i {
+          font-size: clamp(0.8rem, 3vw, 1.5rem);
+
+          color: #f1f1f1;
+          transition: 0.5s;
+          &:hover {
+            color: #9b491a;
+          }
+        }
       }
     }
   }
