--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ header {
         color: #888888;
       }
       h1 {
-        font-size: clamp(2rem, 5vw, 4rem);
+        font-size: clamp(1.5rem, 5vw, 4rem);
         color: white;
         text-transform: uppercase;
       }
@@ -106,16 +106,19 @@ header {
 .product {
   padding: 100px 0;
   .container {
+     gap: 50px;
+    @media screen and (max-width: 767px) {
+       gap: 70px;
+      }
     .cards {
       position: relative;
       gap: 10px;
       width: 350px;
       height: 204px;
-
       border-radius: 8px;
-
       background-color: #f1f1f1;
       padding: 50px 0 0 0;
+      
 
       img {
         position: absolute;
