--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ header {
   padding: 50px 0;
   .container {
     background-color: #c2c4c5;
+     height: 500px;
     overflow: hidden;
     @media screen and (max-width: 767px) {
       background-image: url("./imag/table-remo.png");
@@ -228,6 +229,10 @@ header {
 
     .info {
       width: 50%;
+   
+    
+      padding-left: 40px;
+    
       h1 {
         font-size: clamp(1.5rem, 5vw, 2rem);
         color: #0a0a0a;
@@ -235,9 +240,10 @@ header {
       }
       button {
         width: 160px;
-        max-width: 60%;
+        max-width: 70%;
         height: 48px;
         max-height: 10%;
+        
         color: rgb(5, 5, 5);
         font-family: Manrope;
         font-weight: 700;
@@ -256,9 +262,10 @@ header {
     }
     .img {
       width: 900px;
-      max-width: 80%;
+     
+      max-width: 60%;
       transform: scaleX(-1);
-      margin-top: -80px;
+      margin-top: -100px;
       margin-right: -20px;
       @media screen and (max-width: 767px) {
         margin-top: 0;
