--- a/style.css
+++ b/style.css
@@ -219,9 +219,10 @@ header {
     background-color: #c2c4c5;
      height: 500px;
     overflow: hidden;
+     padding: 50px 0;
     @media screen and (max-width: 767px) {
       background-image: url("./imag/table-remo.png");
-      padding: 50px 0;
+     
 
       background-position: 200% center; 
       background-repeat: no-repeat;
@@ -229,9 +230,10 @@ header {
 
     .info {
       width: 50%;
+        padding-left: 20px;
+      @media screen and (max-width: 768px) {
    
-    
-      padding-left: 40px;
+      }
     
       h1 {
         font-size: clamp(1.5rem, 5vw, 2rem);
