--- a/style.css
+++ b/style.css
@@ -221,11 +221,7 @@ header {
     overflow: hidden;
      padding: 50px 0;
     @media screen and (max-width: 767px) {
-      background-image: url("./imag/table-remo.png");
-     
-
-      background-position: 200% center; 
-      background-repeat: no-repeat;
+      height: 300px;
     }
 
     .info {
@@ -272,7 +268,7 @@ header {
       @media screen and (max-width: 767px) {
         margin-top: 0;
         margin-right: -150px;
-        display: none;
+        /* display: none; */
       }
     }
   }
